<resources>
    <string name="app_name">FindMeToo</string>
    <string name="title_activity_maps">Find Me Too</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="do_you_have_account">Do you have account?</string>
    <string name="if_don_t_have_account">If you don\'t have account</string>
    <string name="click_here">Click Here!</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="you_already_have_account">You already have account</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="profile">Profile</string>
    <string name="gallery">PICK</string>
    <string name="enter_brief_description">Enter brief description</string>
    <string name="enter_title">Enter Title</string>
    <string name="default_notification_channel_id">findmetoo_defauld_channel</string>
    <string name="default_notification_channel_name">findmetoo</string>
    <string name="fcm_message">FindMeToo</string>
    <string name="title_activity_review_profile">activity_review_profile</string>
    <string name="activity_start_time">Start Time</string>
    <string name="activity_end_time">End Time</string>
    <string name="title_findmetoo">FInd Me</string>
    <string name="forgot_password_link">Forgot password?</string>
    <string name="cancel">Cancel</string>
    <string name="resetpassword">Reset</string>
    <string name="title_activity_welcome1">activity_welcome1</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="activity_notifications">Notifications</string>
    <string name="add_activity">Add</string>
    <string name="my_activies">Activies</string>
    <string name="i_m_in">I\'m In</string>
    <string name="activity_image">Activity Image</string>
    <string name="API_KEY">AIzaSyAwyR1QrUpaEtyn8fHerYJXBTawuM-ewOE</string>
</resources>
