<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_margin="@dimen/dimen_20"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            android:src="@drawable/ic_account_accent_24dp"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_marginLeft="@dimen/dimen_5"
            android:layout_marginRight="@dimen/dimen_5"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:imeOptions="actionNext"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginTop="@dimen/dimen_5"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            android:src="@drawable/ic_lock_accent_24dp"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_marginLeft="@dimen/dimen_5"
            android:layout_marginRight="@dimen/dimen_5"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:singleLine="true"/>

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginTop="@dimen/dimen_5"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            android:visibility="invisible"
            android:src="@drawable/ic_lock_accent_24dp"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_marginLeft="@dimen/dimen_5"
            android:layout_marginRight="@dimen/dimen_5"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:hint="@string/confirm_password"
                android:singleLine="true"/>

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/button_register"
            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
            android:layout_width="107dp"
            android:layout_height="@dimen/dimen_30"
            android:layout_marginTop="@dimen/dimen_20"
            android:text="@string/register"
            android:textColor="@android:color/white"
            android:textSize="@dimen/font_13" />

        <Button
            android:id="@+id/button_profile"
            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
            android:layout_width="107dp"
            android:layout_height="@dimen/dimen_30"
            android:layout_marginTop="@dimen/dimen_20"
            android:text="@string/profile"
            android:textColor="@android:color/white"
            android:textSize="@dimen/font_13" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_20"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginTop="@dimen/dimen_5">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/you_already_have_account"/>

            <LinearLayout
                android:id="@+id/button_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="@dimen/dimen_5"
                android:layout_marginRight="@dimen/dimen_5">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_2"
                    android:layout_marginRight="@dimen/dimen_2"
                    android:textColor="@android:color/black"
                    android:text="@string/click_here"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/black"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>